<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Life Savings</string>
    <string name="edit_exercise">Enter Your Exercise Information</string>
    <string name="savings_profile">Your Savings Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="record_exercise">Record</string>
    <string name="sign_out">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">User Profile</string>
    <string name="name_text_field">Name:</string>
    <string name="age_text_field">Age:</string>
    <string name="height_text_field">Height:</string>
    <string name="weight_text_field">Weight:</string>
    <string name="gender_text_field">Gender:</string>
    <string name="phone_number_text_field">Phone number:</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="title_activity_display_info">displayInfo</string>
    <string name="title_activity_exercise_stats">Money You\'ve $aved!!!</string>
    <string name="exercise_total">The Total Amount you saved over your lifetime is: $20.00</string>
    <string name="app_name_edit">Life $avings</string>
    <string name="coming_soon">This activity and its functionality will be added in the next cycle!</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_select_user">Select User</string>
    <string name="title_activity_record_exercise">Record Exercise</string>
    <string name="title_activity_edit_exercise">Edit Exercise</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_user">New User</string>
    <string name="home">Home</string>
    <string name="date_text">Set Date</string>
    <string name="time_text">Set Time</string>
    <string name="duration_text">Set Duration</string>
    <string name="sel_exercise">Select Exercise</string>
    <string name="submit">Submit</string>
    <string name="exit_app">Exit</string>
    <string name="pause_exercise">Pause</string>
    <string name="stop_exercise">Stop</string>
    <string name="steps">Steps</string>
    <string name="resume">Resume</string>
    <string name="exertion_text">Exertion Level</string>
    <string name="enter_height">Enter your height (in inches)</string>
    <string name="enter_weight">Enter weight (in pounds)</string>
    <string name="distance">Distance Traveled</string>
    <string name="take_picture">Take Picture</string>

    <string-array name="exercises">
        <item>Walking</item>
        <item>Jogging</item>
        <item>Running</item>
        <item>Rowing</item>
        <item>Swimming</item>
        <item>Hiking</item>
        <item>Biking</item>
        <item>Lifting</item>
    </string-array>


</resources>
