<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="lifesavings.activities.ExerciseEditFragment"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:text="@string/edit_exercise"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_text"
                android:onClick="onSetTime"/>

            <TimePicker
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/timePicker"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_text"
                android:onClick="onSetDate"/>

            <DatePicker
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/datePicker"
                android:visibility="gone" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/duration_text"/>
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/duration"/>

        </LinearLayout>

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:entries="@array/exercises"
            android:prompt="@string/sel_exercise"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/submit"
            android:onClick="onSubmitEdit"/>
    </LinearLayout>
</ScrollView>