<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16pt"
    android:paddingRight="16pt"
    android:paddingTop="16pt"
    android:paddingBottom="16pt">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/linear_layout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/prof_pic"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/take_picture"
                android:layout_below="@id/prof_pic"
                android:onClick="takePicture"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            >
            <TextView
                android:id="@+id/name_text_view"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_text_field"
                />
            <EditText
                android:layout_below="@+id/name_text_view"
                android:layout_width= "fill_parent"
                android:layout_height= "wrap_content"
                android:inputType="textPersonName"
                android:hint="Enter your name"
                android:id="@+id/name_edit_text"
                />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <TextView
                android:id="@+id/age_text_view"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_text_field"
                />
            <EditText
                android:layout_below="@+id/age_text_view"
                android:layout_width= "fill_parent"
                android:layout_height= "wrap_content"
                android:inputType="number"
                android:hint="Enter your age"
                android:id="@+id/age_edit_text"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/gender_text_view"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_text_field"
                />
            <RadioGroup
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/gender_text_view"
                android:id="@+id/gender_radio_group">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/female_gender_radbutton"
                    android:text="Female"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/male_gender_radbutton"
                    android:text="Male"/>
            </RadioGroup>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <TextView
                android:id="@+id/height_text_view"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height_text_field"
                />
            <EditText
                android:layout_below="@+id/height_text_view"
                android:layout_width= "fill_parent"
                android:layout_height= "wrap_content"
                android:inputType="number"
                android:hint="@string/enter_height"
                android:id="@+id/height_edit_text"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <TextView
                android:id="@+id/weight_text_view"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_text_field"
                />
            <EditText
                android:layout_below="@+id/weight_text_view"
                android:layout_width= "fill_parent"
                android:layout_height= "wrap_content"
                android:inputType="number"
                android:hint="@string/enter_weight"
                android:id="@+id/weight_edit_text"
                />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/save_button"
                android:text="@string/save_button"
                android:onClick="infoSave"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/save_button"
                android:id="@+id/cancel_button"
                android:text="@string/cancel_button"
                android:onClick="infoCancel"/>

        </RelativeLayout>
    </LinearLayout>

</ScrollView>
